--- a/www/main.css
+++ b/www/main.css
@@ -7,10 +7,7 @@
     font-size: 15px;
 }
 .list__span {
-    color: #e6e8ed;
-    font-size: 15px;
-    float: right;
-    margin-top: -5px;
+    font-size: 12px;
 }
 
 .list__color {
@@ -21,15 +18,15 @@
 }
 
 .list__avatar {
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
     margin: 0 15px 0 0;
+    border-radius: 50px;
 }
 
 .list__user-card {
-    margin: 5px 0;
-    border-bottom: 1px solid #e6e8ed;
-    padding: 20px 10px;
+    margin: 20px 0 0 0;
+    padding: 0px 15px;
 }
 
 .list__user-information {
@@ -38,11 +35,17 @@
     width: 100%;
     margin-bottom: 20px;
 }
+
+.list__user-information-text {
+  border-bottom: 1px solid #e6e8ed;
+  width: 100%;
+  padding-bottom: 20px;
+}
 #map {
     flex-grow: 20;
     border-left: 1px solid #e6e8ed;
 }
-body{
+body {
   margin: 0;
 }
 .main-container {
